# ChangeLog for net-analyzer/nessus-client
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/nessus-client/ChangeLog,v 1.5 2007/01/21 17:49:25 cedk Exp $

*nessus-client-1.0.2 (21 Jan 2007)

  21 Jan 2007; Cedric Krier <cedk@gentoo.org> +nessus-client-1.0.2.ebuild:
  Version bump

*nessus-client-1.0.1 (29 Nov 2006)

  29 Nov 2006; Markus Ullmann <jokey@gentoo.org>
  -nessus-client-1.0.0_rc5.ebuild, +nessus-client-1.0.1.ebuild:
  Version bump

*nessus-client-1.0.0_rc5 (09 Oct 2006)

  09 Oct 2006; Markus Ullmann <jokey@gentoo.org>
  -nessus-client-1.0.0_rc4.ebuild, +nessus-client-1.0.0_rc5.ebuild:
  Version bump and fixing parallel make issue, also closing bug #149221

  06 Feb 2006; Marcelo Goes <vanquirius@gentoo.org>
  nessus-client-1.0.0_rc4.ebuild:
  Add an icon for Nessus Client, made with Deraison's permission.

  04 Feb 2006; Marcelo Goes <vanquirius@gentoo.org>
  nessus-client-1.0.0_rc4.ebuild:
  Add make_desktop_entry.

*nessus-client-1.0.0_rc4 (04 Feb 2006)

  04 Feb 2006; Marcelo Goes <vanquirius@gentoo.org> +metadata.xml,
  +nessus-client-1.0.0_rc4.ebuild:
  Initial commit for bug 111060. Thanks to Stefano <raistlin at s0ftpj dot
  org> for the request.
