@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST NessusClient-1.0.1.tar.gz 1583040 RMD160 c6eea380001c8fdbe3def29172bb2dac6ad03b79 SHA1 fee43654d9d8b2e5220298d9ca607b93bbc2ff5b SHA256 b11952d2f843b608a87905eb0604234ba464d050c835b5d0e8fc56fb3cd64add
 DIST NessusClient-1.0.2.tar.gz 2058324 RMD160 e641d060fc1c4aaecdc75b3b18d8d6c3e4320c40 SHA1 bed8d5ac52f1e224cb41192a1a6b8cc568398bfb SHA256 e9c26c2cefce3e0e3eade69199272fcbf2e9c1bd19d51ae8f8d73b0e82aee1af
 DIST nessus-client.png.bz2 10043 RMD160 9d1af8ec4533da24e282ad3168fc29dd1fb9845c SHA1 71a09d8cc82336b0036dd318953a4d90e8d5b523 SHA256 857de50872354058de10fee0bd2bbc2a59e6ec56d75ccfd331847cf16142ce4c
@@ -5,14 +8,14 @@ EBUILD nessus-client-1.0.1.ebuild 949 RMD160 68742d2a0d4408faf1f465a31914d37ad05
 MD5 5e085b4807fb85fd125565ab06143027 nessus-client-1.0.1.ebuild 949
 RMD160 68742d2a0d4408faf1f465a31914d37ad05a090b nessus-client-1.0.1.ebuild 949
 SHA256 cabf126c145ee126af32ae5ee35d40fcf0236412b4bd7aeca3959cb18ad8b053 nessus-client-1.0.1.ebuild 949
-EBUILD nessus-client-1.0.2.ebuild 948 RMD160 9e7ae3f6c7e0de350caa9bc23e0dec913c5524ce SHA1 98c4b6eada31f63aaac8dc6f03a1816117096b90 SHA256 c2a6002c89e9777778d6d548cabf1f67a979fc2657c10d35e09e2f2f10294c95
-MD5 4ecc4b44b8f7190a4dd62a589f7d5312 nessus-client-1.0.2.ebuild 948
-RMD160 9e7ae3f6c7e0de350caa9bc23e0dec913c5524ce nessus-client-1.0.2.ebuild 948
-SHA256 c2a6002c89e9777778d6d548cabf1f67a979fc2657c10d35e09e2f2f10294c95 nessus-client-1.0.2.ebuild 948
-MISC ChangeLog 1253 RMD160 1d7b29aa954a83aeddf80b51b3ef7495b2365542 SHA1 fe25bb4d2e6e3e132d9ed378e19a61669ade461e SHA256 74fe461fde5583633a4ca426c98e5619e74d27a756af3ba6bbcf338f8da333f1
-MD5 3d3a69edf0be54cf20abeefc8204e4f3 ChangeLog 1253
-RMD160 1d7b29aa954a83aeddf80b51b3ef7495b2365542 ChangeLog 1253
-SHA256 74fe461fde5583633a4ca426c98e5619e74d27a756af3ba6bbcf338f8da333f1 ChangeLog 1253
+EBUILD nessus-client-1.0.2.ebuild 1238 RMD160 86b756ede6796df847bb86897ecbaca5015cd00e SHA1 85d3fa1d976a24caff4fd564fb09f0dd66130a79 SHA256 7ecc7e9cd423c34caea2dcba086406f11c97f32ded0d5f6ea4f6f842594e252f
+MD5 9acc6aeb7141be4034b8c9a790af2a26 nessus-client-1.0.2.ebuild 1238
+RMD160 86b756ede6796df847bb86897ecbaca5015cd00e nessus-client-1.0.2.ebuild 1238
+SHA256 7ecc7e9cd423c34caea2dcba086406f11c97f32ded0d5f6ea4f6f842594e252f nessus-client-1.0.2.ebuild 1238
+MISC ChangeLog 1362 RMD160 8845b32951f4a556d0eb72ad4f8f964cff321019 SHA1 8c8bb32e2cff8205bcf646aeebb9be719fbdf64f SHA256 547b31e39739f738cc64e072b2edd664ae75f141214f3c9c665d13c1c44c01e8
+MD5 2155ffb487f64e44a070e69a46fa38ba ChangeLog 1362
+RMD160 8845b32951f4a556d0eb72ad4f8f964cff321019 ChangeLog 1362
+SHA256 547b31e39739f738cc64e072b2edd664ae75f141214f3c9c665d13c1c44c01e8 ChangeLog 1362
 MISC metadata.xml 159 RMD160 28e799fe0fd02aaab9d4bbe5595f133101606f5b SHA1 9f5df3eabd621951a959cc8e0e2e0d352cd1fe1e SHA256 b75c711bd971e46f0ec957e833c60879b0c5023e0bb94409a6255781b69f6dc6
 MD5 f34e3c8858756da0001b12d2d3fa1af2 metadata.xml 159
 RMD160 28e799fe0fd02aaab9d4bbe5595f133101606f5b metadata.xml 159
@@ -23,3 +26,10 @@ SHA256 fa27ae016ddf25c7eef9eeb307a89d5939e81dd944e533689c97d8747461b48b files/di
 MD5 cf4ee73a29495b49f2b4ea239d51b0be files/digest-nessus-client-1.0.2 500
 RMD160 1733886cfd17731220603f8485859ce5741eb407 files/digest-nessus-client-1.0.2 500
 SHA256 f804139642e85014f3d332f64d15e92c22387fec833679d2db87248a75ad3c79 files/digest-nessus-client-1.0.2 500
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.3 (GNU/Linux)
+
+iD8DBQFGCZuVz974XjDVpbkRAlpRAJ9rzXNvT8K4hDYa9PN0ag9QYWQ/8ACg1K3D
+3sZPX4TR4MJ4VSoskaOE4CQ=
+=DRnM
+-----END PGP SIGNATURE-----
