@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/nessus-client
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/nessus-client/ChangeLog,v 1.5 2007/01/21 17:49:25 cedk Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/nessus-client/ChangeLog,v 1.6 2007/03/27 22:32:46 jokey Exp $
+
+  27 Mar 2007; Markus Ullmann <jokey@gentoo.org> nessus-client-1.0.2.ebuild:
+  add doc dep wrt bug #168980
 
 *nessus-client-1.0.2 (21 Jan 2007)
 
